Fixed legend and difficulty layout issues

--- a/TicTacToeJs/css/style.css
+++ b/TicTacToeJs/css/style.css
@@ -24,7 +24,7 @@ div {
 
 .difficulty {
 
-    margin: 12% 0% 0% 1%;
+    margin: 220px 0% 0% 1%;
     text-align: left;
 }
 
@@ -32,7 +32,7 @@ div {
 
     position: absolute;
     color: white;
-    margin: 5% 0px 0px 1%;
+    margin: 80px 0px 0px 1%;
     font-size: 16pt;
     white-space: pre-line;
 }
